layout issues and post page to better styling

--- a/sass/_postpage.scss
+++ b/sass/_postpage.scss
@@ -22,6 +22,7 @@
     background-color: $maincolor;
     border: 1px solid white;
     word-break: break-all;
+    margin-bottom: -12px;
 }
 
 .replypage-box {
@@ -36,4 +37,6 @@
     border-bottom: 1px solid white;
     border-left: 1px solid white;
     background-color: $maincolor;
+    margin-top: -24px;
+    margin-bottom: -24px;
 }
