--- a/static/css/mystyles.css
+++ b/static/css/mystyles.css
@@ -5235,7 +5235,7 @@ canvas {
   font-size: 40px; }
 
 .navbar {
-  background-color: transparent; }
+  background-color: rgba(255, 255, 255, 0.027); }
 
 .navbar-item {
   color: #F1F2EF; }
@@ -5367,7 +5367,8 @@ u {
 .postpage-box {
   background-color: #899ACE;
   border: 1px solid white;
-  word-break: break-all; }
+  word-break: break-all;
+  margin-bottom: -12px; }
 
 .replypage-box {
   background-color: #899ACE;
@@ -5379,7 +5380,9 @@ u {
   font-size: 16px;
   border-bottom: 1px solid white;
   border-left: 1px solid white;
-  background-color: #899ACE; }
+  background-color: #899ACE;
+  margin-top: -24px;
+  margin-bottom: -24px; }
 
 .signupform {
   position: relative;
